--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+[1.0.0] - 2023-04-17
+
+- TAdded documentation
+- Program was tested and works as expected
+
 [0.9.0] - 2023-03-20
 
 - Basic functionality defined in assignment is implemented
