--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
 [1.0.0] - 2023-04-17
 
-- TAdded documentation
+- Added documentation
 - Program was tested and works as expected
 
 [0.9.0] - 2023-03-20
